添加饮食计划

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -9,7 +9,7 @@ tags:
 
 2016，五味杂陈。
 
-儿子的出生带来了欢乐，更像一个核弹，把过去的片甲不留。生活引入一个如此大的变量，再无计划可言。他晚上哭闹次数，决定了第二天的决策。三代人挤在租来的小房子里纷争不断，岳母的心情决定了太太是否辞职。而且长期的睡眠剥夺让我和太太的脾气都变得不太好，有时一个反问口气就把火药桶点炸。
+儿子的出生带来了欢乐，更像一个核弹，把过去炸的片甲不留。生活引入一个如此大的变量，再无计划可言。他晚上哭闹次数，决定了第二天的决策。三代人挤在租来的小房子里纷争不断，岳母的心情决定了太太是否辞职。而且长期的睡眠剥夺让我和太太的脾气都变得不太好，有时一个反问口气就把火药桶点炸。
 
 坦诚的讲，儿子出生的头六个月，我的脑海经常会浮现一个念头：为什么这么早要孩子啊，再拖两年就好了。
 
@@ -50,6 +50,8 @@ tags:
 
 ## 1.3 了解身体
 
+**储备康复医学的知识，而不是每每受伤之后，再去弥补。**
+
 要搞懂几个问题：
 
 1. 跑步和游泳容易损伤哪些肌肉和韧带? 这些肌肉和韧带的解剖结构，起点、终点、疼痛特点。
@@ -60,7 +62,23 @@ tags:
 
 4. 学会交替训练。比如说游泳与跑步，散步，拉伸之间按照什么节奏来是比较适合身体的。
 
-储备康复医学的知识，而不是每每受伤之后，再去弥补。
+
+**饮食计划**
+
+我坚持素食晚餐已经好几年了，最大的挑战来自于"偶有特例"。
+
+- 晚上和大叔、治民见面，就破戒吃大餐。
+- 过年见了岳父，也不介意喝点酒。
+- 教会晚上聚餐，也不忍拒绝。
+
+这些弹性处理方式让自己越来越难遵守原则，有时自己都会顺水推舟的给自己找借口。所以我决定做一个 "不近人情"的人了，坚持自己的饮食，提前为各种"特例"想好处理方案，不再为任何人任何事破戒。
+
+| --------------------- | --------------------- |
+| If 大叔和治民约我        | Then 中午吃大餐，下午聊天，晚上早早回家。(不再是晚上吃大餐)|
+| If 教会有晚上聚餐        | Then 不参加                                   |
+| If 周五晚上有教会小组聚餐  | Then 不参加                                  |
+| If 晚上有重要朋友聚会     | Then 把形式从"找个馆子吃大餐"转变为"去咖啡馆喝鲜榨果汁"。 |
+| If 晚上加班             | Then 买个全麦面包 或 吃韩国拌饭 |
 
 
 ## 1.4 学会安息
@@ -145,7 +163,7 @@ TODO
 
 - 喜欢大段的工作时间，极其讨厌被人打断。比如我写过这种无情的文章[《我不在》](/busy.html)和[《不愿理睬的邮件》](http://mednoter.com/busy-2.html)。
 
-- 喜欢私人空间且安静的工作环境。
+- 喜欢私人且安静的工作环境。
 
 - 对人冷漠，不愿意碰管理相关的事情。"谁生病了？谁请假了？谁心情不好了？谁对未来迷茫了？谁需要沟通了？俱乐部招新了！餐厅伙食加菜了！"这类邮件统统进了垃圾箱。
 
