ssh-add automatically

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -142,7 +142,7 @@ tags:
 
 **1.6.5 Develop a strong knowledge of operating systems**
 
-- Linux Kernal ?
+- 《Linux Kernal Development (Third Edition)》
 
 
 **1.6.2 Learn database**
