update family plan

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -165,10 +165,23 @@ tags:
 
 # 2. 家庭
 
-1. 太太想买一套房子。我要开始打理家里的财务，并且学习房产知识。
+## 1. Relationship with wife
 
-2. 教育小沐沐。晚上一起看巧虎动画片，教他唱里面的儿歌和跳舞。
+- Pray for intimacy.
+- Tell her how much I love her everyday, sincerely.
+- Give her a hug everyday, sincerely.
+- No matter how busy I am, always take time to help her when she encounter any problem.
+- Appreciate what she has done.
 
+
+## 2. 教育小沐沐。
+
+- 看完《子女心，父母情》
+
+
+## 3. 财务计划
+
+太太想买一套房子。我要开始打理家里的财务，并且学习房产知识。
 
 
 # 3. 职场
