update state for goal

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -43,7 +43,7 @@ tags:
 手艺人不愁没饭吃，过去的安全感来自知识和能力。未来两年，我要不断操练在耶稣那里获得安全感。要准备好伴随而来的碌碌为为，甘为平庸。
 
 
-## 1.2 继续缩减自己的社交生活
+## 1.2 继续缩减自己的社交生活 ✅
 
 尽量只见挚友，不会客。
 
@@ -58,7 +58,7 @@ tags:
 
 2. 自己颈椎病的特点，如何康复。
 
-3. 把《精准拉伸》读完，学习有效拉伸。
+3. 把《精准拉伸》读完，学习有效拉伸。✅
 
 4. 学会交替训练。比如说游泳与跑步，散步，拉伸之间按照什么节奏来是比较适合身体的。
 
@@ -89,9 +89,11 @@ tags:
 
 1. 在家。克制工作和学习的冲动；不看邮件；不看手机(含仰卧和俯卧)；主手机只保留 Anki。
 
-2. 工作。每工作一小时，休息15分钟；休息时的背部筋膜放松必不可少；每晚 22:30 睡觉，不熬夜。
+2. 工作。每工作一小时，休息15分钟；休息时的背部筋膜放松必不可少；每晚 22:30 睡觉，不熬夜。✅
 
-3. 地铁上不看手机，只是默想；走路不要低头，抬头挺胸；等儿子长大一点，晚上回家和他踢皮球，玩台球、练琴、皮划艇；太太有空时和她一起散步。
+3. 地铁上不看手机，只是默想；走路不要低头，抬头挺胸；
+
+4. 等儿子长大一点，晚上回家和他踢皮球，玩台球、练琴、皮划艇；太太有空时和她一起散步。✅
 
 
 ## 1.5 开始写第一本书《暗记》，并完成以下章节的书稿
@@ -176,10 +178,10 @@ tags:
 
 ## 2. 教育小沐沐。
 
-- 看完《子女心，父母情》
+看完《子女心，父母情》
 
 
-## 3. 财务计划
+## 3. 财务计划 ✅
 
 太太想买一套房子。我要开始打理家里的财务，并且学习房产知识。
 
@@ -221,7 +223,7 @@ TODO
 
 所以未来两年，我尽可能认识工作中所能接触到的专家，加强和他们的合作，看谁愿意做我的 "师傅"。
 
-一定要抓一个专家！
+一定要抓一个专家！✅
 
 
 ## 3.4 我的价值观是什么？
@@ -240,9 +242,9 @@ TODO
 
 ## 3.6 我该在 SAP Jam 做出什么贡献？
 
-1. 营造团队良好的技术氛围，分享知识。
+1. 营造团队良好的技术氛围，分享知识。✅
 
-2. Take project *profile service* from vancouver team.
+2. ~~Take project *profile service* from vancouver team.~~ ❌
 
 3. 应用层的数据库优化。我目前还没有能力在架构层做事情，那么我就把应用层的烂代码找出来，联系作者，和他一起优化。
 
@@ -271,7 +273,7 @@ TODO
 
 每周六下午三点继续委身于 Bruce 的 [EQUIP Leadership](http://www.iequip.org/about/mission-and-vision/) 课程。不迟到，不翘课。
 
-## 4.2 寻找门徒
+## 4.2 寻找门徒 ✅
 
 Bruce 花了两年时间装备我，我也有责任去装备年幼的，我要找1-2个提摩太。[4]
 
