Plan should be more realistic
What

I do need some time to review anki flashcards, I can't do it at
home, I can't do it when working.

"地铁上不看手机，只是默想" is not an attainable goal.

How

make a more realistic plan.

Reviewed by God.

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -91,9 +91,11 @@ tags:
 
 2. 工作。每工作一小时，休息15分钟；休息时的背部筋膜放松必不可少；每晚 22:30 睡觉，不熬夜。✅
 
-3. 地铁上不看手机，只是默想；走路不要低头，抬头挺胸；
+3. 做地铁。上班路上不看手机，只是默想和祷告。下班的路上可以复习 Anki。
 
-4. 等儿子长大一点，晚上回家和他踢皮球，玩台球、练琴、皮划艇；太太有空时和她一起散步。✅
+4. 走路不要低头，抬头挺胸看天空；
+
+5. 等儿子长大一点，晚上回家和他踢皮球，玩台球、练琴、皮划艇；太太有空时和她一起散步。✅
 
 
 ## 1.5 开始写第一本书《暗记》，并完成以下章节的书稿
