--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -1,5 +1,5 @@
 ---
-title: "我为何对游戏(行业)怀有深深的偏见？"
+title: "我为何对游戏怀有深深的偏见？"
 layout: post
 guid: M8vAwYistno
 date: 2018-02-13 13:49:04
@@ -12,7 +12,7 @@ tags:
 
 **我：**整个人生劳碌不止，到死时反思一下，其实很多事情做和不做并没有什么区别，也没有很大的意义。人生如戏。既然这样，弹钢琴，跳舞，绘画，写作，敲代码，看书，做科研不过是人生旅途中打法无聊的一点乐子。
 
-既然是乐子，为什么还有高雅低贱之分？为什么前者就是阳春白雪，游戏就是下里巴人？为什么提起游戏[1]，传统人士想到词汇都是嗤之以鼻，玩物丧志，颓废，死宅，恨铁不成钢，自闭？
+既然是乐子，为什么还有高雅低贱之分？为什么前者就是阳春白雪，打电脑游戏就是下里巴人？为什么提起游戏[1]，传统人士想到词汇都是嗤之以鼻，玩物丧志，颓废，死宅，恨铁不成钢，自闭？
 
 **妻子：**
 
@@ -24,6 +24,7 @@ tags:
 
 最后，社会习俗是一把锁(或框架)。大家都觉得钢琴/跳舞/绘画是"有用"的，游戏"无用"。这个框架会帮你思考，帮你做决定。人们的偏见往往来自框架，如果你硬是辩证性思维，搞出点反对声音，就不得不面对这股强大框架的阻力。
 
+---
 
 我从小就很喜欢玩游戏。
 
