--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -22,7 +22,7 @@ tags:
 
 因为上瘾，人也往往不善待自己的身体。玩完一局，再开一局。眼睛干涩，视力衰退，颈椎僵硬，全然不顾。熬夜通宵，晚睡晚起，循环往复。
 
-最后，社会习俗是一把锁(或框架)。大家都觉得钢琴/跳舞/绘画是"有用"的，游戏"无用"。这个框架会帮你思考，帮你做决定。人们的偏见往往来自框架，如果你硬是辩证性思维，搞出点反对声音，就不得不面对这股强大框架的阻力。
+最后，社会习俗是一把锁(或框架)。大家都觉得钢琴/跳舞/绘画是"有用"的，游戏"无用"。这个框架会帮你思考，帮你做决定。人们的偏见往往来自框架，如果你硬是辩证性思维，搞出点反对声音，就不得不面对框架的这股强大阻力。
 
 ---
 
@@ -32,13 +32,13 @@ tags:
 
 ![](/media/files/2018/2018-02-13-play-boy.jpg)
 
-上初中后，堂弟买了一台学习机。每年盼星星，盼月亮，盼到寒暑假。爷爷奶奶把家里的电视机从橱柜里搬出来[2]，和弟弟开始打魂斗罗，超级马里奥。
+上初中后，堂弟买了一台小霸王学习机。每年盼星星，盼月亮，盼到寒暑假。爷爷奶奶把家里的电视机从橱柜里搬出来[2]，和弟弟开始打魂斗罗，超级马里奥。
 
 ![](/media/files/2018/2018-02-13-小霸王.jpg)
 
 ![](/media/files/2018/2018-02-13-魂斗罗.jpg)
 
-我的高中是在济南市历城二中读的，里面有不少城里孩子。他们的游戏机让我大开眼界。但是当我看到多媒体室看到那齐刷刷几十台电脑后，就再也不愿意碰任何游戏机了。电脑上的 [帝国时代](https://zh.wikipedia.org/zh-cn/%E4%B8%96%E7%B4%80%E5%B8%9D%E5%9C%8B%E7%B3%BB%E5%88%97) 真是太好玩了！
+我的高中是在济南市历城二中读的，里面有不少城里孩子。他们的游戏机让我大开眼界。但是当我看到多媒体室看到那齐刷刷几十台电脑后，就再也不愿巴结他们了。电脑上的 [帝国时代](https://zh.wikipedia.org/zh-cn/%E4%B8%96%E7%B4%80%E5%B8%9D%E5%9C%8B%E7%B3%BB%E5%88%97) 真是太好玩了，这才是真正的游戏！
 
 我的同学更加狂热，上课时偷偷复制了计算机老师的钥匙。半夜偷偷从宿舍爬出来去机房玩帝国时代。因为我不是他们的好朋友，他们作案时拒绝我入伙。后来，他们被抓了，记大过处分，并且全校批评。
 
