--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -20,7 +20,7 @@ tags:
 
 虽说小玩怡情，游戏往往伴随上瘾。让人魂牵梦绕，茶饭不思。上瘾的人可以不管孩子，放弃做父母的责任；可以不管妻子，推卸丈夫的责任；可以豪掷千金，财务陷入混乱。因为心思不在工作上，自然也不会是勤恳员工。
 
-因为上瘾，人也往往不善待自己的身体。玩完一局，再开一局。眼睛干涩，视力衰退，颈椎僵硬，全然不顾。熬夜通宵，晚睡晚起，循环往复。
+因为上瘾，人也不善待自己的身体。玩完一局，再开一局。眼睛干涩，视力衰退，颈椎僵硬，全然不顾。熬夜通宵，晚睡晚起，循环往复。
 
 最后，社会习俗是一把锁(或框架)。大家都觉得钢琴/跳舞/绘画是"有用"的，游戏"无用"。这个框架会帮你思考，帮你做决定。人们的偏见往往来自框架，如果你硬是辩证性思维，搞出点反对声音，就不得不面对框架的这股强大阻力。
 
