--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -212,15 +212,21 @@ CS
 
 对于村上春树，这个远大的目标是「跑的更多」，他很自然的就戒掉烟。
 
-《当我谈跑步时我谈起什么》：
 
+
+> 村上春树:
+>
 > 我想减肥。刚刚成为作家的那几年，我吸烟吸得很凶，差不多一天要吸60支，借此来集中精力写作。吸烟让我的牙齿和手指甲都变黄了。33岁时，我决定戒烟，结果腰胯周围冒出不少赘肉。于是我开始跑步。在我看来跑步是最可行的减肥方式。
 >
-> 每天都跑步，戒烟便是自然而然。戒烟诚然不是一件轻而易举的事，但是你没法一边吸烟一边坚持跑步。‘还想跑得更多’这一自然的想法，成了戒烟的重要动机，还成了克服脱瘾症状的有效手段。戒烟，仿佛是跟从前的生活诀别的象征。”
+> 每天都跑步，戒烟便是自然而然。戒烟诚然不是一件轻而易举的事，但是你没法一边吸烟一边坚持跑步。**‘还想跑得更多’**这一自然的想法，成了戒烟的重要动机，还成了克服脱瘾症状的有效手段。戒烟，仿佛是跟从前的生活诀别的象征。”
+>
+> *《当我谈跑步时我谈起什么》*
 
 这个目标仅仅是因为喜欢，不是因为争名逐利，也不是因为羡慕嫉妒，也不是为了出人头地等愚蠢的理由。
 
->村上春树: 我说起每天都坚持跑步，总有人表示钦佩：“你真是意志坚强啊！”得到表扬，我固然欢喜，这总比受到贬低要惬意得多。然而，并非只凭意志坚强就可以无所不能，人世不是那么单纯的。老实说，我甚至觉得每天坚持跑步同意志的强弱，并没有太大的关联。我能够坚持跑步二十年，恐怕还是因为跑步合乎我的性情，至少“不觉得那么痛苦”。人生来如此：喜欢的事儿自然可以坚持下去，不喜欢的事儿怎么也坚持不了。意志之类，恐怕也与“坚持”有一丁点瓜葛。然而无论何等意志坚强的人，何等争强好胜的人，不喜欢的事情终究做不到持之以恒；做到了，也对身体不利。
+>村上春树:
+>
+>我说起每天都坚持跑步，总有人表示钦佩：“你真是意志坚强啊！”得到表扬，我固然欢喜，这总比受到贬低要惬意得多。然而，并非只凭意志坚强就可以无所不能，人世不是那么单纯的。老实说，我甚至觉得每天坚持跑步同意志的强弱，并没有太大的关联。我能够坚持跑步二十年，恐怕还是因为跑步合乎我的性情，至少“不觉得那么痛苦”。人生来如此：喜欢的事儿自然可以坚持下去，不喜欢的事儿怎么也坚持不了。意志之类，恐怕也与“坚持”有一丁点瓜葛。然而无论何等意志坚强的人，何等争强好胜的人，不喜欢的事情终究做不到持之以恒；做到了，也对身体不利。
 
 
 当我把职场上的远大的目标设定为「对知识的追求」时，很自然就会停止做非理性的行为。
