--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -151,7 +151,6 @@ CS
 
 ### 玩游戏的益处是什么？
 
-
 我们是自由的，我们可以通宵玩游戏，抽烟，喝酒，喝大杯的可乐，无所事事的刷朋友圈，熬夜，窝在沙发终日看电视，但这些对我们健康，品格的塑造，生命的成长毫无益处。
 
 我们做这些事情非但不造就人，还可能还会拆毁别人。首当其冲的就是孩子，我们每个人都不希望这些事情发生在自己孩子身上。
@@ -166,21 +165,23 @@ CS
 
 这句话可以应用到我们生活所有中性的事情上，没有益处，我们就少做；不造就人，我们就少做。真正的自由，是不受辖制。
 
-### 如何戒？
+### 如何戒游戏？
+
+人的意志力(self-controll)是有限的，戒烟，戒酒，戒色，戒赌，戒游戏，所有需要「戒」的东西都会消耗我们的意志力。
 
 #### 1. 替换它，而不是压制它。
 
-人的意志力(self-controll)是有限的，戒烟，戒酒，戒色，戒赌，戒游戏，所有需要「戒」的东西都会消耗我们的意志力。所以，我们可以尝试新思路：发掘一件感兴趣，对自己有益的新乐子**替换**不好的兴趣(游戏)。这种悄无声息的替换不会让人纠结万分，也不会损耗意志力。
+我们可以尝试新思路：发掘一件感兴趣，对自己有益的兴趣**替换**不好的兴趣。这种悄无声息的替换不会让人纠结万分，也不会损耗意志力。
 
 在前文中，我那个屡拜屡站，经常灰心丧气的年轻朋友，正在用「学习Python」来替换玩游戏的时间。有一次他竞 debug 到凌晨，让我十分震惊。
 
 我还有个喜欢拉丁舞的年轻朋友，他正努力的重新分配时间，把更多的时间分配给拉丁舞。游戏就慢慢被替换掉了。
 
-虽然他们现在还会玩游戏，但是越来越少，不再上瘾，并且收放自如。我相信在现实世界中的成就，自我发展(self-development)，以及健康的体魄会让他们更幸福。
+虽然他们现在还会玩游戏，但是越来越少，不再上瘾，并且收放自如。我相信在现实世界中的成就，自我发展，以及健康的体魄会让他们更幸福。
 
 #### 2. 远离诱惑，而不是胜过诱惑。
 
-《Ask It: The Question That Will Revolutionize How You Make Decisions》一书的作者坦言自己是脆弱的，为了保护自己，他给自己设定了很多边界。
+《Ask It: The Question That Will Revolutionize How You Make Decisions》一书的作者是个自制力很强的牧师，他仍坦言自己是脆弱的，为了保护自己，他给自己设定了很多边界。
 
 这点与我仰慕的一位老师不谋而合：
 
@@ -188,7 +189,7 @@ CS
 - 如果只有他才能给予帮助和辅导，这次见面要在安排在公共场所，咖啡店，教会，等等。
 - 如果女性友人来家里寻求帮助和辅导，妻子一定要在场。
 
-胜过诱惑艰难的，除去诱惑的土壤反而轻而易举，这是他们的制胜法宝。应用到我们身上，可能是：
+胜过诱惑是艰难的，除去诱惑的土壤轻而易举，这是他们的秘诀。应用到我们身上，可能是：
 
 - 想戒掉电视。干脆就把家里的电视机拆掉，我试过，死不了人，且节省出很多时间。
 - 想让自己的婚姻更美好，与异性保持距离，拒绝暧昧关系，拒绝潜在的红/蓝颜知己。
@@ -198,21 +199,17 @@ CS
 
 #### 3. 配偶(或密友)的支持
 
-当事人提前和配偶交代好备用方案。如果毒瘾发作，意志力丧失，又回到旧有的轨道上。配偶要开始掌权，并及时的打断非理性行为。
+当事人若打算练习自制力，可以提前和配偶交代好备用方案。如果毒瘾发作，自制力丧失，又回到旧有的轨道上。配偶开始掌权，并及时的打断非理性行为。
 
 比如我有时会折腾数码产品上瘾，熬夜到很晚。如果不是公司生产事故，妻子会提醒「你现在正在做非理性的事情」并命令我睡觉。
 
-我和妻子也正在努力实践「在家不看手机」，屡败屡战。
-
-如果配偶在诱惑面前再次摔倒，彼此不要指责，而是互相勉励。这一点我的好朋友小蓝和晓晓就做的很好。
+如果配偶在诱惑面前再次摔倒，彼此不要指责，而是互相勉励。我的好友小蓝和晓晓在这方面就做的很好。
 
 
 #### 4. 设定一个自己喜欢的，远大的目标。
 
 
-对于村上春树，这个远大的目标是「跑的更多」，他很自然的就戒掉烟。
-
-
+对于村上春树，当他爱上跑步，设定远大的目标是「跑的更多」后，戒烟变成很自然的事情。
 
 > 村上春树:
 >
@@ -222,22 +219,21 @@ CS
 >
 > *《当我谈跑步时我谈起什么》*
 
-这个目标仅仅是因为喜欢，不是因为争名逐利，也不是因为羡慕嫉妒，也不是为了出人头地等愚蠢的理由。
+这个目标是如此纯粹，不为争名逐利，也为羡慕嫉妒，也为出人头地等愚蠢的理由，仅仅是因为喜欢。
 
 >村上春树:
 >
 >我说起每天都坚持跑步，总有人表示钦佩：“你真是意志坚强啊！”得到表扬，我固然欢喜，这总比受到贬低要惬意得多。然而，并非只凭意志坚强就可以无所不能，人世不是那么单纯的。老实说，我甚至觉得每天坚持跑步同意志的强弱，并没有太大的关联。我能够坚持跑步二十年，恐怕还是因为跑步合乎我的性情，至少“不觉得那么痛苦”。人生来如此：喜欢的事儿自然可以坚持下去，不喜欢的事儿怎么也坚持不了。意志之类，恐怕也与“坚持”有一丁点瓜葛。然而无论何等意志坚强的人，何等争强好胜的人，不喜欢的事情终究做不到持之以恒；做到了，也对身体不利。
 
 
-当我把职场上的远大的目标设定为「对知识的追求」时，很自然就会停止做非理性的行为。
+对于我，当把职场上的远大的目标设定为「对知识的追求」时，很自然就会停止做非理性的行为。
 
 - 停止喝酒，喝酒会损伤大脑。
 - 停止熬夜，防止短命。
 - 坚持锻炼，强壮大脑。
 
+
 对于你，这个远大的目标可能是在卡内基音乐厅演奏，发表一次全英文流利的演讲，在某个细分领域入门，解决领域难题，证实数学猜想，成为好爸爸/妈妈，或成为一个婚姻辅导专家。
-
-
 
 
 Note
