--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -118,9 +118,9 @@ CS
 
 面对电脑屏幕，眼睛眨眼频率会降低，泪膜破裂时间变短，长久可致干眼症；错误的工作姿势也会增加颈椎和腰椎的压力，日积月累会得椎间盘突出；久坐会让腹腔压力增加，前列腺充血，男性容易得前列腺炎和痔疮。
 
-![](/media/files/2018/2018-02-13-wechat-game.jpg)
-
 「繁忙了一天，玩一局游戏，让我们彻底忘记工作的疲惫。」是彻底的伪命题。
+
+![](/media/files/2018/2018-02-13-wechat-game.jpg)
 
 如果工作之余继续玩游戏，把视线从电脑屏幕切换到手机屏幕，大脑又一次切换到高强度的状态。游戏中接连不断的任务，强烈的声光刺激，紧迫的节奏，让我们沉浸其中，反而忽略了身体的求救信号。日复一日，健康早晚会崩盘。
 
@@ -192,10 +192,10 @@ CS
 胜过诱惑是艰难的，除去诱惑的土壤轻而易举，这是他们的秘诀。应用到我们身上，可能是：
 
 - 想戒掉电视。干脆就把家里的电视机拆掉，我试过，死不了人，且节省出很多时间。
-- 想让自己的婚姻更美好，与异性保持距离，拒绝暧昧关系，拒绝潜在的红/蓝颜知己。
+- 想让自己的婚姻更美好。就与异性保持距离，拒绝暧昧关系，拒绝潜在的红/蓝颜知己。
 - 想戒 Android 上的游戏。开启家长控制，让配偶保管密码。
 - 想戒 iPhone 上的游戏。把游戏都卸掉，让配偶保管 Apple Store 密码。
-- 想戒掉微信，就把微信装在破手机上，扔到家里。
+- 想戒掉微信。就把微信装在破手机上，扔到家里。
 
 #### 3. 配偶(或密友)的支持
 
