--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -118,13 +118,11 @@ CS
 
 面对电脑屏幕，眼睛眨眼频率会降低，泪膜破裂时间变短，长久可致干眼症；错误的工作姿势也会增加颈椎和腰椎的压力，日积月累会得椎间盘突出；久坐会让腹腔压力增加，前列腺充血，男性容易得前列腺炎和痔疮。
 
-「繁忙了一天，玩一局游戏，让我们彻底忘记工作的疲惫。」是彻底的伪命题。
+「繁忙了一天，玩一局游戏，让我们彻底忘记工作的疲惫。」是彻底的谎言。
 
 ![](/media/files/2018/2018-02-13-wechat-game.jpg)
 
-如果工作之余继续玩游戏，把视线从电脑屏幕切换到手机屏幕，大脑又一次切换到高强度的状态。游戏中接连不断的任务，强烈的声光刺激，紧迫的节奏，让我们沉浸其中，反而忽略了身体的求救信号。日复一日，健康早晚会崩盘。
-
-有些人甚至不甘心屈居排行榜第二，熬夜刷排行榜。
+如果工作之余继续玩游戏，把视线从电脑屏幕切换到手机屏幕，大脑又一次切换到高强度的状态。游戏中接连不断的任务，强烈的声光刺激，紧迫的节奏，让我们沉浸其中。有些人不甘心屈居排行榜第二，熬夜刷排行榜。日复一日，健康早晚崩盘。
 
 身体需要的是真正的安息，陪家人散步，陪孩子玩耍，游泳，踢球，跑步。
 
@@ -138,7 +136,7 @@ CS
 
 回想自己的大学得抑郁症最难熬的那几年，游戏让我逃避抑郁症。但玩完后，随之而来的是更强烈的空虚。于是我日复一日的玩游戏。我厌恶自己，希望有个人能帮助。
 
-遇到大麻烦，是不是应该鼓足勇气正视，然后去努力解决？
+遇到大麻烦，是不是应该先鼓足勇气正视，然后去努力解决？
 
 如果一而再的达不成目标，就想想目标对吗？目标符合SMART原则吗？有工具书可以优化路径吗？比如 [《成功，动机与目标》](https://book.douban.com/subject/22994632/)
 
@@ -147,7 +145,6 @@ CS
 如果婚姻不幸福，与其沉醉在游戏里，对配偶施行冷暴力，不如手挽手，去寻找教会的婚姻辅导，读一些婚姻辅导材料[《爱的五种语言》](https://book.douban.com/subject/1444900/)。
 
 生活艰辛，烦恼不尽相同，总有正确的解决之道。用游戏来麻痹自己，和买醉无异。
-
 
 ### 玩游戏的益处是什么？
 
@@ -181,7 +178,17 @@ CS
 
 #### 2. 远离诱惑，而不是胜过诱惑。
 
-《Ask It: The Question That Will Revolutionize How You Make Decisions》一书的作者是个自制力很强的牧师，他仍坦言自己是脆弱的，为了保护自己，他给自己设定了很多边界。
+> 摆脱诱惑的唯一方法就是屈服于诱惑 - Oscar Wilde
+
+多金文艺诗人 Oscar Wilde 说，想戒掉性，肥胖，烟，女人，虚荣，包包吗？那先让我们玩个痛快。
+
+吃遍天下美味，就不贪食了；大麻吸到爽，就不抽烟了；买完所有限量款的LV，就不再想买包了；把自己工资花完，刷完信用卡，就不会过度消费了。搞完女人搞男人，嫖完妓女偷别人妻，就知道性也就这么回事。
+
+![](/media/files/2018/2018-02-14-yield.jpg)
+
+摆脱诱惑有个更简单，成本更低的方法：**明知自己胜不过诱惑，干脆就逃离它。**
+
+《Ask It: The Question That Will Revolutionize How You Make Decisions》一书的作者是个自制力很强的牧师，他坦言自己是脆弱的，为了保护自己和女性友人免受**性的诱惑**，他给自己设定了很多边界。
 
 这点与我仰慕的一位老师不谋而合：
 
@@ -189,7 +196,7 @@ CS
 - 如果只有他才能给予帮助和辅导，这次见面要在安排在公共场所，咖啡店，教会，等等。
 - 如果女性友人来家里寻求帮助和辅导，妻子一定要在场。
 
-胜过诱惑是艰难的，除去诱惑的土壤轻而易举，这是他们的秘诀。应用到我们身上，可能是：
+这秘诀应用到我们身上，可能是：
 
 - 想戒掉电视。干脆就把家里的电视机拆掉，我试过，死不了人，且节省出很多时间。
 - 想让自己的婚姻更美好。就与异性保持距离，拒绝暧昧关系，拒绝潜在的红/蓝颜知己。
@@ -197,9 +204,10 @@ CS
 - 想戒 iPhone 上的游戏。把游戏都卸掉，让配偶保管 Apple Store 密码。
 - 想戒掉微信。就把微信装在破手机上，扔到家里。
 
+
 #### 3. 配偶(或密友)的支持
 
-当事人若打算练习自制力，可以提前和配偶交代好备用方案。如果毒瘾发作，自制力丧失，又回到旧有的轨道上。配偶开始掌权，并及时的打断非理性行为。
+若打算练习自制力，可以提前和配偶交代好备用方案。如果戒断症状发作，自制力丧失，又回到旧有的轨道上。配偶开始掌权，并及时的打断非理性行为。
 
 比如我有时会折腾数码产品上瘾，熬夜到很晚。如果不是公司生产事故，妻子会提醒「你现在正在做非理性的事情」并命令我睡觉。
 
@@ -207,7 +215,6 @@ CS
 
 
 #### 4. 设定一个自己喜欢的，远大的目标。
-
 
 对于村上春树，当他爱上跑步，设定远大的目标是「跑的更多」后，戒烟变成很自然的事情。
 
