--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -180,9 +180,11 @@ CS
 
 > 摆脱诱惑的唯一方法就是屈服于诱惑 - Oscar Wilde
 
-多金文艺诗人 Oscar Wilde 说，想戒掉性，肥胖，烟，女人，虚荣，包包吗？那先让我们玩个痛快。
+多金文艺诗人 Oscar Wilde 的观点：想戒掉性，肥胖，烟，女人，虚荣，包包等诱惑吗？那先让我们玩个痛快。
 
-吃遍天下美味，就不贪食了；大麻吸到爽，就不抽烟了；买完所有限量款的LV，就不再想买包了；把自己工资花完，刷完信用卡，就不会过度消费了。搞完女人搞男人，嫖完妓女偷别人妻，就知道性也就这么回事。
+吃遍天下美味，就不贪食了；大麻吸到爽，就不抽烟了；买完所有限量款的 Lv，就不再想买包了；把自己工资花完，刷完信用卡，就不会过度消费了。搞完女人搞男人，嫖完妓女偷人妻，就知道性也就这么回事。
+
+最终四大皆空。
 
 ![](/media/files/2018/2018-02-14-yield.jpg)
 
@@ -243,7 +245,10 @@ CS
 对于你，这个远大的目标可能是在卡内基音乐厅演奏，发表一次全英文流利的演讲，在某个细分领域入门，解决领域难题，证实数学猜想，成为好爸爸/妈妈，或成为一个婚姻辅导专家。
 
 
-Note
+Thanks to Landon Lan, Ellina Sun, Allen Lee for reading drafts of this.
+
+
+## Note
 
 1. 本文中的游戏的定义: 电脑游戏和手机游戏。
 2. 小时候爷爷奶奶只允许我和堂弟在寒暑假时看电视，平时电视机都被锁到柜子里。
