--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -235,9 +235,9 @@ CS
 >我说起每天都坚持跑步，总有人表示钦佩：“你真是意志坚强啊！”得到表扬，我固然欢喜，这总比受到贬低要惬意得多。然而，并非只凭意志坚强就可以无所不能，人世不是那么单纯的。老实说，我甚至觉得每天坚持跑步同意志的强弱，并没有太大的关联。我能够坚持跑步二十年，恐怕还是因为跑步合乎我的性情，至少“不觉得那么痛苦”。人生来如此：喜欢的事儿自然可以坚持下去，不喜欢的事儿怎么也坚持不了。意志之类，恐怕也与“坚持”有一丁点瓜葛。然而无论何等意志坚强的人，何等争强好胜的人，不喜欢的事情终究做不到持之以恒；做到了，也对身体不利。
 
 
-对于我，当把职场上的远大的目标设定为「对知识的追求」时，很自然就会停止做非理性的行为。
+对于某些人，当把远大的目标设定为「对知识的追求」时，很自然就会主动保护自己的大脑，停止非理性的自残行为。
 
-- 停止喝酒，喝酒会损伤大脑。
+- 停止喝酒，喝酒会损伤大脑和肝脏。
 - 停止熬夜，防止短命。
 - 坚持锻炼，强壮大脑。
 
