reduce the impact on my colleagues

--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -19,7 +19,7 @@ tags:
 
 首先，玩游戏除了让自己爽，对别人没有任何价值。钢琴学好，可以在班级里表演；歌唱的好，可以在教会的诗班献唱；代码写的好，可以让老板多赚点钱；书看到多可以致用，可以传道授业解惑。在人生的某个节点，你所拥有的都会让别人受益，除了游戏。
 
-虽说小玩怡情，游戏往往伴随上瘾。让人魂牵梦绕，茶饭不思。上瘾的人可以不管孩子，放弃做父母的责任；可以不管妻子，推卸丈夫的责任；可以豪掷千金，财务陷入混乱。因为心思不在工作上，自然也不会是勤恳员工。
+虽说小玩怡情，游戏往往伴随上瘾。让人魂牵梦绕，茶饭不思。上瘾的人可以不管孩子，放弃做父母的责任；可以不管妻子，推卸丈夫的责任；可以豪掷千金，财务陷入混乱。心思不在工作上，很可能会丢饭碗。
 
 因为上瘾，人也不善待自己的身体。玩完一局，再开一局。眼睛干涩，视力衰退，颈椎僵硬，全然不顾。熬夜通宵，晚睡晚起，循环往复。
 
