--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -8,6 +8,8 @@ tags:
   -
 ---
 
+> **No 1. Rule of drug dealing: Never get high on your own supply.**
+![](/media/files/2018/2018-02-24-no-1-rule-of-drug-dealing-never-get-high-on-29236549.jpg)
 
 周六和妻子进行了一次有趣的谈话。
 
@@ -250,5 +252,12 @@ Thanks to Landon Lan, Ellina Sun, Allen Lee for reading drafts of this.
 
 ## Note
 
+0. iPad 发布后，获得了巨大成功。记者对乔布斯的采访片段：
+
+    记者: “所以，您的孩子肯定很喜欢 iPad 咯？”
+
+    乔布斯: “他们还没用过 iPad 呢，我们限制孩子在家里使用电子产品。” ([read more](https://www.guokr.com/post/639620/))
 1. 本文中的游戏的定义: 电脑游戏和手机游戏。
 2. 小时候爷爷奶奶只允许我和堂弟在寒暑假时看电视，平时电视机都被锁到柜子里。
+3. TED Talk: Adam Alter: [为什么电子设备让我们不快乐](https://www.ted.com/talks/adam_alter_why_our_screens_make_us_less_happy)
+4. Adam Alter: [*Irresistible: The Rise of Addictive Technology and the Business of Keeping Us Hooked*](https://www.goodreads.com/book/show/30962055-irresistible)
