update new year's resolution

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -161,6 +161,9 @@ tags:
 - *[The Little Schemer](https://www.goodreads.com/book/show/548914.The_Little_Schemer)*
 
 
+**1.6.5 离散数学** (2018年增补项)
+
+
 ## 1.7 Practice public speaking
 
 与 3.6.1 结合执行。
@@ -180,13 +183,21 @@ tags:
 
 ## 2. 教育小沐沐。
 
-看完《子女心，父母情》
+1. 看完《子女心，父母情》
+2. 与妻子协商，统一管教儿子策略：什么时候口头教育，什么时候通过杖打沐沐。不要因为批评教育沐沐产生夫妻争执，影响夫妻感情。(2018年增补项)
+3. 列一个育儿书单 (2018年增补项)
+4. 读完重要的育儿书籍。(2018年增补项)
+    - 《傅雷家书》✅
 
+## 3. 财务计划
 
-## 3. 财务计划 ✅
-
-太太想买一套房子。我要开始打理家里的财务，并且学习房产知识。
-
+1. 打理家里的财务，学习房产知识，太太想买一套房子。✅
+2. 学习如何管理财务。(2018年增补项)✅
+    - 养成随手记账的习惯
+    - 邀请太太一起来管理财务
+    - 设定家庭财务账户，每个月自动缴纳水电煤，自动帮爸爸妈妈充手机话费。
+    - 设定零花钱预算: 太太每个月零花钱 1500元，吕小荣每个月 Budget 2000元。
+    - 设定月度家庭财务会议。回顾财报，纠正非理性消费，量入为出，存钱。
 
 # 3. 职场
 
