--- a/_posts/2018-04-04-aText.md
+++ b/_posts/2018-04-04-aText.md
@@ -40,10 +40,9 @@ tags:
 
 ## 自动替换敏感词
 
-用途：当你输入敏感词时，aText 会自动帮你替换为三官正确的词汇。
+用途：当你输入敏感词时，aText 会自动帮你替换为不敏感词汇。
 
 ![](/media/files/2018/2018-04-04_14-29-05.gif)
-2018-04-04_14-29-05.gif
 
 ## 自动校正拼写错误的术语
 
