--- a/_posts/2016-01-20-busy-2.md
+++ b/_posts/2016-01-20-busy-2.md
@@ -7,14 +7,13 @@ tags:
   - 
 ---
 
-经常收到的一些咨询邮件，比如不懂技术的人创业如何选择技术栈 / 该如何快速的认识上海的程序员 / 帮忙牵线搭桥等等。虽然回复的慢，一般都认真作答了，有的相约吃饭谈笑甚欢。你若认真问，我就认真答。
+经常收到的一些咨询邮件，不懂技术的人创业如何选择技术栈？如何认识上海的程序员？ 能否帮忙牵线搭桥？
 
-也碰到十分恼火的邮件，通篇都在将：我很忙，我是伸手党，我不会 Google，我不愿读文档，你喂我吧。谁会愿意理睬这种邮件呢？
-
+通常我都认真作答了，除非遇到以下类型的邮件：
 
 1. 作者很懒
 
-    没有做过任何调研，没有Google，没有 RTFM
+    没有做过任何调研，没有Google，没有 RTFM。
 
 2. 问题很烂
 
@@ -27,6 +26,11 @@ tags:
     * 正文小余200字
 
 只要符合任意一条，直接扔进垃圾箱。我的时间虽然是免费提供给你，但并不廉价，我要分配给更需要的人。
+
+
+这类邮件的作者就像一个贪婪的乞丐，我不愿去找工作(检索)，我也不愿意工作(读文档)，我只会伸手，求你施舍我，喂饱我吧。
+
+谁会理睬这种邮件呢？
 
 
 ## Reference
