suprise on winning the prize

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -257,6 +257,8 @@ tags:
 ## 3.6 我该在 SAP Jam 做出什么贡献？
 
 1. 营造团队良好的技术氛围，分享知识。
+    ![](/media/files/2018/2018-07-20_15-16-57.jpg)
+    (surprise on winning the prize on 20 July 2018)
 
 2. ~~Take project *profile service* from vancouver team.~~ ❌
 
