update plan for 2019

--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -9,7 +9,7 @@ tags:
   -
 ---
 
-## 我的兴趣 Vs 时代浪潮
+## 我的兴趣 Vs 时代的浪潮
 
 我的兴趣
 
@@ -23,44 +23,139 @@ Diabetes
 
 
 
-## 路线图
+## 时代的浪潮(未来)在哪里？
+
+1. [MIT Smartest Companies ](https://www.technologyreview.com/lists/companies/2017/)
+
+2. 听 TED 演讲
+
+3. 刷 TechCrunch，留意最前沿的 AI 公司，生物公司，医学公司都在做什么。
 
 
-## 自己做着玩的小项目
+## 哪些公司在做我感兴趣的事情？
 
-### Flashcard
+了结他们的业务，文化，工作内容
+
+
+### 基因测序公司
+
+**23andMe**
+
+**IIIlumina**
+
+**Oxford Nanopore**
+
+**Veritas Genetics**
+
+
+## 人工智能+医学 公司
+
+..
+
+
+## 与前沿领域的研究者聊天，提出好问题，回答好问题
+
+什么是生物计算？
+
+有没有比较好的存储 DNA 的数据库？
+
+有没有比较好的存储 Protein 的数据库？
+
+
+
+## 尝试小项目
+
 
 ### 糖尿病的食谱网站
 
+根据糖尿病患者的职业/体重/身高等信息推荐每日食谱。
+
+难度：简单
+
+Requirements
+
+1. 微信小程序支持
+2. 微信公众号支持
+
+
+同类产品
+
+1. 国外比较成功的产品 [Forks Meal Planner](https://my.forksmealplanner.com/#!/plan)
+2. [My Prototype](https://gmd19w.axshare.com/#p=%E9%A6%96%E9%A1%B5)
+
+
+
+## 疫苗助手
+
+孩子出生之后，需要定期打疫苗。疫苗助手可以通过邮件/短信提醒爸妈。
+
+难度：简单。
+
+
+### 基于卡片的个人知识管理工具
+
+难度：困难
+
+市面上有点类似的产品
+
+[makandra cards](https://makandracards.com/)
+
+
 ### PubMed
 
+
+Requirement
+
+1. 可以查看自己写的论文引用情况
+    - 论文之间的引用
+    - 社交媒体引用。Blog/Twitter/Weibo/...
+    - 媒体引用
+
+2. 数据分析
+
+
 ### 医生 CRM
+
+难度：十分困难
+
+
+每个医生都有自己的品牌，需要管理自己的病人资源。
 
 - 提醒他们定期复查
 - 保存他们的既往病史
 
+评估
 
-## 加入一些感兴趣的前瞻性的公司做顾问
+这个产品的工作量将会十分庞大，一个人估计搞不定。
 
 
-## 和一些研究者聊天，了结科研的一些前沿性研究
 
-1. DNA Database
-2. Protein Database
-3. 生物计算
+## 加入前瞻性的公司做技术顾问
 
+开智
+
+- 练习 Python
+- 补前端知识
+    - React
+    - Reactive Native
+    - Node.js
 
 
 ## 在计算机领域的尝试
 
-- 学习 Python (1-2 month)
 - 学习人工智能
+- 学习 Python (1-2 month)
 - 图数据库
-- React
-- Reactive Native
-- Node.js
+- 补前端知识
 
+## 筹划出国工作2年
 
+需要筹备以下事宜
 
-
+- 提前学车，以免到国外寸步难行。
+- 储蓄30万的存款。离开中国后，每年在国内的固定开支需要 17 万/年，提前把攒够钱。
+    - 小房子的房贷 15万/年
+    - 保险费用 5万/年
+- 在 Glassdoor 看目标公司的主营业务，文化
+- 找韬哥练习口语，模拟面试。
 
