--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -21,6 +21,8 @@ Pubmed - Biomedical database
 
 Diabetes
 
+数据库 /Hadoop/spark/storm/kafka/Hbase/ElasticSearch (这个我也很有兴趣)数据量到这种规模，估计只有一些巨头才有这数据量吧
+
 
 
 ## 时代的浪潮(未来)在哪里？
@@ -51,6 +53,12 @@ Diabetes
 ## 人工智能+医学 公司
 
 ..
+
+## 数据库公司
+
+[PingCAP](https://pingcap.com/recruit-cn/)
+
+
 
 
 ## 与前沿领域的研究者聊天，提出好问题，回答好问题
