--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -166,4 +166,16 @@ Requirement
     - 保险费用 5万/年
 - 在 Glassdoor 看目标公司的主营业务，文化
 - 找韬哥练习口语，模拟面试。
+- 刘小坤的执业医师资格证书，需要找一个地方挂靠/或一直挂靠在八院。
+
+
+
+
+
+## 参考资料
+
+
+[丁香园: 关于出国挂靠执业医师证](http://www.dxy.cn/bbs/topic/33479832)
+[丁香园: 【help】出国读博的话国内的执业医师证要怎么办呢？](http://www.dxy.cn/bbs/topic/29707714)
+[丁香园: 【求助】出国期间如何进行医师注册](http://www.dxy.cn/bbs/topic/20776770)
 
