--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -56,10 +56,23 @@ Diabetes
 
 ## 数据库公司
 
-[PingCAP](https://pingcap.com/recruit-cn/)
+### PingCAP
+
+https://pingcap.com/recruit-cn/
 
 
+### SAP HANA
 
+| Pros | Cons |
+| :--- | :--- |
+| 数据库领域是我的最爱 | 技术核心团队在德国，而不是美国。 |
+| 收入稳定，医疗保险齐全，内部换岗对家庭的影响最小 | Job Description 要求会德语。我不满足条件，同时我认为在德语上的投入是浪费时间。 |
+| HANA 是用C++写的，可以拓宽编程视野，未来如果去Google，也可以做过渡 |  |
+| 会大量涉及到算法，数据结构，操作系统，这些都是我的最爱 |  |
+
+HANA 在上海/美国的团队扮演的角色是销售，设计，实施角色，并不是技术核心团队。加入上海的 HANA 不符合我的职业规划。
+
+最终结论：不考虑HANA。
 
 ## 与前沿领域的研究者聊天，提出好问题，回答好问题
 
