--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -137,6 +137,10 @@ Location: San Francisco (US)
 
 License: ?
 
+### Cockroach DB
+
+License: [Open Source](https://github.com/cockroachdb/cockroach)
+
 
 ## 与前沿领域的研究者聊天，提出好问题，回答好问题
 
