--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -9,7 +9,7 @@ tags:
   -
 ---
 
-## 我的兴趣 Vs 时代的浪潮
+## 我的兴趣有哪些？
 
 我的兴趣
 
@@ -50,9 +50,14 @@ Diabetes
 **Veritas Genetics**
 
 
-## 人工智能+医学 公司
+## 人工智能💙医学
 
-..
+1. 学位问题。相当多做人工智能公司并研发，而只是拿来主意，使用别人开源的人工智能框架。真正在这个行业深耕的人，大部分都有 PhD 学位，数学基础扎实。
+
+2. 人工智能虽然击败了人类围棋冠军，但是至今还未在商业上有成功的应用案例。
+
+结论：以我的能力，人工智能领域遥不可及，先不要碰了。
+
 
 ## 数据库公司
 
