--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -145,6 +145,8 @@ License: ?
 ### Cockroach DB
 
 License: [Open Source](https://github.com/cockroachdb/cockroach)
+Language: [C++](https://github.com/cockroachdb/rocksdb/tree/b5ed67fb73b68ec1cc02df5492afcf638f6bda96/memtable)
+Location: [New York, NY](https://www.glassdoor.com/Overview/Working-at-Cockroach-Labs-EI_IE1168502.11,25.htm)
 
 
 ## 与前沿领域的研究者聊天，提出好问题，回答好问题
