--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -144,9 +144,16 @@ License: ?
 
 ### Cockroach DB
 
-License: [Open Source](https://github.com/cockroachdb/cockroach)
+License: Open Source, APL 2.0
+Github: https://github.com/cockroachdb/cockroach
 Language: [C++](https://github.com/cockroachdb/rocksdb/tree/b5ed67fb73b68ec1cc02df5492afcf638f6bda96/memtable)
 Location: [New York, NY](https://www.glassdoor.com/Overview/Working-at-Cockroach-Labs-EI_IE1168502.11,25.htm)
+
+### facebook/rocksdb
+
+License: Open Source
+Github: https://github.com/facebook/rocksdb/
+Language: C++
 
 
 ## 与前沿领域的研究者聊天，提出好问题，回答好问题
