--- a/_drafts/2018-07-30-plan-for-2019.md
+++ b/_drafts/2018-07-30-plan-for-2019.md
@@ -65,11 +65,26 @@ Diabetes
 
 https://pingcap.com/recruit-cn/
 
+TiDB
+
+License:  [Open Source](https://github.com/pingcap/tidb)
+Language: Golang
+
+
+TiKV, the store layer of TiDB
+
+License: [Open Source](https://github.com/tikv/tikv)
+Language: Rust
+
+
+
 ### MySQL
 
 | Pros | Cons |
 | :--- | :--- |
 | |Oracle 声誉太差|
+
+
 
 ### PostgreSQL
 
@@ -91,6 +106,9 @@ License: Open Source
 | :--- | :--- |
 |  | Facebook has abandoned Cassandra. [Link](https://news.ycombinator.com/item?id=16523438) |
 
+
+
+
 ### MemSQL
 
 Type: NewSQL
@@ -101,6 +119,9 @@ Location: San Francisco, Seattle, Portland.
 
 License: Closed Source
 
+
+
+
 ### H-Store
 
 Type: NewSQL
@@ -108,6 +129,8 @@ Type: NewSQL
 Language: C++, Java
 
 Purpose: experimental project written by professors in universities.
+
+
 
 
 ### SAP HANA
@@ -125,12 +148,16 @@ License: Closed Source.
 | :--- | :--- |
 | 数据库领域是我的最爱 | 技术核心团队在德国，而不是美国。 |
 | 收入稳定，医疗保险齐全，内部换岗对家庭的影响最小 | Job Description 要求会德语。我不满足条件，同时我认为在德语上的投入是浪费时间。 |
-| HANA 是用C++写的，可以拓宽编程视野，未来如果去Google，也可以做过渡 | HANA 在上海/美国的团队扮演的角色是销售，设计，实施角色，并不是技术核心团队。加入上海的 HANA 团队不符合我的职业规划。 |
+| HANA 是用C++写的，可以拓宽编程视野，如果未来去Google，也可以做过渡 | HANA 在上海/美国的团队扮演的角色是销售，设计，实施角色，并不是技术核心团队。加入上海的 HANA 团队不符合我的职业规划。 |
 | 会大量涉及到算法，数据结构，操作系统，这些都是我的最爱 |  |
+
+
 
 ### Google Spanner
 
 也就想想吧，反正去不了。
+
+
 
 ### Clustrix
 
@@ -142,12 +169,16 @@ Location: San Francisco (US)
 
 License: ?
 
+
+
 ### Cockroach DB
 
 License: Open Source, APL 2.0
 Github: https://github.com/cockroachdb/cockroach
 Language: [C++](https://github.com/cockroachdb/rocksdb/tree/b5ed67fb73b68ec1cc02df5492afcf638f6bda96/memtable)
 Location: [New York, NY](https://www.glassdoor.com/Overview/Working-at-Cockroach-Labs-EI_IE1168502.11,25.htm)
+
+
 
 ### facebook/rocksdb
 
