update new year resolution

--- a/_posts/2016-11-22-plan-for-2017-and-2018.md
+++ b/_posts/2016-11-22-plan-for-2017-and-2018.md
@@ -197,6 +197,7 @@ tags:
     - 设定零花钱预算: 太太每个月零花钱 1500元，吕小荣每个月 Budget 2000元。
     - 设定月度家庭财务会议。回顾财报，纠正非理性消费，量入为出，存钱。
 3. 给整个家庭购买了香港保诚公司的重疾险。(2018 增补项)✅
+4. 设计整个家庭投资组合，通过汇丰(香港)月供3000-5000，购买盈富指数基金。(2018 增补项)✅
 
 # 3. 职场
 
