--- a/_drafts/2018-07-30-plan-for-2019-draft.md
+++ b/_drafts/2018-07-30-plan-for-2019-draft.md
@@ -1,5 +1,5 @@
 ---
-title: "2019 Plan: 探索，我属于何处"
+title: "2019 Plan: 探索，我属于何处（头脑风暴）"
 layout: post
 guid: x2ZzZvB4m2DPpgSjXav
 date: 2018-07-30 14:05:09
@@ -286,7 +286,7 @@ Requirement
 - 图数据库
 - 补前端知识
 
-## 筹划出国工作2年
+## 出国工作2年?
 
 需要筹备以下事宜
 
@@ -297,9 +297,6 @@ Requirement
 - 在 Glassdoor 看目标公司的主营业务，文化
 - 找韬哥练习口语，模拟面试。
 - 刘小坤的执业医师资格证书，需要找一个地方挂靠/或一直挂靠在八院。
-
-
-
 
 
 ## 参考资料
