--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -48,23 +48,31 @@ tags:
 
 5. C++ 太难了，我对自己的要求是读懂就好。
 
+6. 参加 PingCAP 举办的线下数据库会议 (optional)
+	- 2019-01-12 done
+
 ## 5. 教会 (Church)
 
-1. 用英语带领 Equip 课程，培训门徒。
-	2017年我和三五年轻人组织了读书会，有基督徒，也有非基督徒。我们以非常松散的方式读各种书，讨论各种职场问题。2019年，打算更加严肃一点，花更多时间在上面。一，用英语主持。二，每次认真备课，先把上课内容写下来，让Bruce修订，然后再上课。  
+### 5.1 用英语带领 Equip 课程，培训门徒。
+
+2017年我和三五年轻人组织了读书会，有基督徒，也有非基督徒。我们以非常松散的方式读各种书，讨论各种职场问题。2019年，打算更加严肃一点，花更多时间在上面。一，用英语主持。二，每次认真备课，先把上课内容写下来，让Bruce修订，然后再上课。  
 	
-	对于非基督徒朋友，他可以在英语有所收获，不至于乏味。对于基督徒，可以装备他们的领导力，培养未来的教会领袖。
+对于非基督徒朋友，他可以在英语有所收获，不至于乏味。对于基督徒，可以装备他们的领导力，培养未来的教会领袖。
 
-2. 继续担任教会的财务出纳
+### 5.2 继续担任教会的财务出纳
 
-3. 探索新的服侍方向。
-	- 多组织小组内的家庭聚餐
-	- 每天做地铁时，顺便给人民广场的流浪汉买早餐
+### 5.3 探索新的服侍方向。
 
+1. 开放家庭，组织家庭聚餐至少10次。
+	- 2019-01-11 接待小组成员在家庭内查经，规划2019年的个人计划。
 
-以上是我2019年的计划。
+2. 每天做地铁时，顺便给人民广场的流浪汉买早餐。
+	- week1 done
+	- week2 done
 
 ---
+
+以上是我2019年的计划。
 
 祷告，读经，锻炼，陪妻子和孩子等等，做的久了就变成了日常，不一一罗列了，详情请参考这篇文章 [《每周反思清单》](/resolutions-for-my-life.html)。
 
