update new year resolution

--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -26,7 +26,9 @@ tags:
 
 ## 3. 家庭 (Family)
 
-- 学会开车
+1. 学会开车
+
+2. 财务健康。过节俭的生活，增加家庭的储蓄，偿还债务，定投香港盈富基金。
 
 ## 4. 职业生涯 (Career)
 
@@ -59,26 +61,25 @@ tags:
 	
 对于非基督徒朋友，他可以在英语有所收获，不至于乏味。对于基督徒，可以装备他们的领导力，培养未来的教会领袖。
 
+- 2019-01-22 Intro to Equipleadership [Done]
+
 ### 5.2 继续担任教会的财务出纳
 
 ### 5.3 探索新的服侍方向。
 
 1. 开放家庭，组织家庭聚餐至少10次。
 	- 2019-01-11 接待小组成员在家庭内查经，规划2019年的个人计划。
+	- 2019-01-27 请大叔和治民来家里吃饭。
+	- 2019-02-06 请若郎来家里吃年夜饭。
 
 2. 每天做地铁时，顺便给人民广场的流浪汉买早餐。
 	- week1 done
 	- week2 done
+	- week3 done
 
 ---
 
 以上是我2019年的计划。
 
 祷告，读经，锻炼，陪妻子和孩子等等，做的久了就变成了日常，不一一罗列了，详情请参考这篇文章 [《每周反思清单》](/resolutions-for-my-life.html)。
-
-
-
-
-
-
 
