update plan for 2019

--- a/_drafts/2018-07-30-plan-for-2019-draft.md
+++ b/_drafts/2018-07-30-plan-for-2019-draft.md
@@ -61,6 +61,12 @@ Diabetes
 
 ## 数据库公司
 
+
+
+## MariaDB
+
+
+
 ### PingCAP
 
 https://pingcap.com/recruit-cn/
@@ -76,6 +82,21 @@ TiKV, the store layer of TiDB
 License: [Open Source](https://github.com/tikv/tikv)
 Language: Rust
 
+
+### Cockroach DB
+
+License: Open Source, APL 2.0
+Github: https://github.com/cockroachdb/cockroach
+Language: [C++](https://github.com/cockroachdb/rocksdb/tree/b5ed67fb73b68ec1cc02df5492afcf638f6bda96/memtable)
+Location: [New York, NY](https://www.glassdoor.com/Overview/Working-at-Cockroach-Labs-EI_IE1168502.11,25.htm)
+
+
+
+### RocksDB by Facebook
+
+License: Open Source
+Github: https://github.com/facebook/rocksdb/
+Language: C++
 
 
 ### MySQL
@@ -171,20 +192,9 @@ License: ?
 
 
 
-### Cockroach DB
 
-License: Open Source, APL 2.0
-Github: https://github.com/cockroachdb/cockroach
-Language: [C++](https://github.com/cockroachdb/rocksdb/tree/b5ed67fb73b68ec1cc02df5492afcf638f6bda96/memtable)
-Location: [New York, NY](https://www.glassdoor.com/Overview/Working-at-Cockroach-Labs-EI_IE1168502.11,25.htm)
+## Scylla
 
-
-
-### facebook/rocksdb
-
-License: Open Source
-Github: https://github.com/facebook/rocksdb/
-Language: C++
 
 
 ## 与前沿领域的研究者聊天，提出好问题，回答好问题
