--- a/_posts/2018-02-13-game.md
+++ b/_posts/2018-02-13-game.md
@@ -74,9 +74,9 @@ CS
 
 **游戏更领我进入计算机领域的大门，并以此为生。但现在我不需要它了，甚至开始厌恶它。**
 
-看到教会里的弟兄沉湎游戏，心里直叹气，恨铁不成钢。
+看到教会里的弟兄沉湎游戏，蹉跎岁月。心里直叹气，恨铁不成钢。
 
-看到一些小朋友没日没夜的玩 iPad，我就觉得小朋友很可怜，并且想骂他们家长。
+看到一些小朋友没日没夜的玩 iPad，就很可怜他们，并想责备他们家长。
 
 中午吃饭，同事们眉飞色舞聊各种游人物的特性，我一句话搭不进去，也不想搭。
 
@@ -134,9 +134,9 @@ CS
 
 他经常沮丧，然后就去打游戏，甚至熬夜到凌晨两点。第二天醒来，又陷入深深的自责。他不敢告诉女朋友 ，怕女友责备他不成熟。
 
-他是每个人的缩影，游戏确实可以让我们忽略眼前的烦恼。
+他是很多人生活的缩影，游戏确实可以让我们忽略眼前的烦恼。
 
-回想自己的大学得抑郁症最难熬的那几年，游戏让我逃避抑郁症。但玩完后，随之而来的是更强烈的空虚。于是我日复一日的玩游戏。我厌恶自己，希望有个人能帮助。
+回想自己的大学得抑郁症最难熬的那几年，游戏让我逃避抑郁症。但玩完后，随之而来的是更强烈的空虚，于是我日复一日的玩游戏。我厌恶自己，希望有个人能帮助。
 
 遇到大麻烦，是不是应该先鼓足勇气正视，然后去努力解决？
 
