--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -28,7 +28,7 @@ tags:
 
 1. 学会开车
 
-2. 财务健康。过节俭的生活，增加家庭的储蓄，偿还债务，定投香港盈富基金。
+2. 财务健康。过节俭的生活，增加家庭的储蓄，偿还债务，定投香港盈富基金和腾讯。（锁定投资策略后，3-5年不要再频繁调整。不要再花时间学习投资了，以节省时间，专心在对天国，对教会，对社会，对身边的人，有真正价值的事情上。）
 
 ## 4. 职业生涯 (Career)
 
