--- a/_drafts/2018-07-30-plan-for-2019-draft.md
+++ b/_drafts/2018-07-30-plan-for-2019-draft.md
@@ -281,6 +281,7 @@ Requirement
 
 帮助每个医生建立自己的小程序，管理自己的病人资源，病人可以问诊，每次收费30元。
 
+![](/media/files/2019/2019-08-18-mini-program.jpg)
 
 
 ## 加入前瞻性的公司做技术顾问
