update the progress of 2019 plan

--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -22,7 +22,7 @@ tags:
 
 ## 2. 健康 (Health)
 
-学会自由泳。
+学会自由泳。(2019-08-19 ✔️)
 
 ## 3. 家庭 (Family)
 
@@ -37,6 +37,7 @@ tags:
 1. 为开源的数据库贡献代码，比如TiDB, PD, or TiKV.
 
 2. 学习分布式系统理论知识
+	- [PingCAP Talent Plan](https://github.com/pingcap/talent-plan)
 	- 卡内基梅隆大学的数据库课程
 	- MIT分布式系统课程
 	- 扫完数据库相关的论文
@@ -71,12 +72,43 @@ tags:
 	- 2019-01-11 接待小组成员在家庭内查经，规划2019年的个人计划。
 	- 2019-01-27 请大叔和治民来家里吃饭。
 	- 2019-02-06 请若郎来家里吃年夜饭。
+	- 2019-07-12 请小蓝，晓晓，若郎，吴琼，关关去光大会展中心游泳，聚餐。
+	- 2019-07-20 请小蓝，晓晓，若郎游泳，聚餐
 
 2. 每天做地铁时，顺便给人民广场的流浪汉买早餐。
 	- week1 done
 	- week2 done
 	- week3 done
-
+	- week4 done
+	- week5 done
+	- week6 done
+	- week7 done
+	- week8 done
+	- week9 done
+	- week10 done
+	- week11 done
+	- week12 done
+	- week13 done
+	- week14 done
+	- week15 done
+	- week16 done
+	- week17 done
+	- week18 done
+	- week19 done
+	- week20 done
+	- week21 done
+	- week22 done
+	- week23 done
+	- week24 done
+	- week25 done
+	- week26 done
+	- week27 (on vacation)
+	- week28 (on vacation)
+	- week29 done
+	- week30 done
+	- week31 done
+	- week32 done
+	- week33 done
 ---
 
 以上是我2019年的计划。
