--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -37,7 +37,7 @@ tags:
 1. 为开源的数据库贡献代码，比如TiDB, PD, or TiKV.
 
 2. 学习分布式系统理论知识
-	- [PingCAP Talent Plan](https://github.com/pingcap/talent-plan)
+	- [PingCAP Talent Plan](https://github.com/pingcap/talent-plan) (Almost Done ✔️)
 	- 卡内基梅隆大学的数据库课程
 	- MIT分布式系统课程
 	- 扫完数据库相关的论文
