--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -24,11 +24,16 @@ tags:
 
 学会自由泳。(2019-08-19 ✔️)
 
+- 打腿
+- 划水：侧身，前伸胳膊，全程收腹，肩膀放松，抬高手肘
+- 换气
+- 翻滚转身 (TODO)
+
 ## 3. 家庭 (Family)
 
 1. 学会开车
 
-2. 财务健康。过节俭的生活，增加家庭的储蓄，偿还债务，定投香港盈富基金和腾讯。（锁定投资策略后，3-5年不要再频繁调整。不要再花时间学习投资了，以节省时间，专心在对天国，对教会，对社会，对身边的人，有真正价值的事情上。）
+2. 财务健康。过节俭的生活，增加家庭的储蓄，偿还债务，定投香港盈富基金和腾讯。（锁定投资策略后，3-5年不要再频繁调整。不要再花时间学习投资了，以节省时间，专心在对天国，对教会，对社会，对身边的人，有真正价值的事情上。）✔️
 
 ## 4. 职业生涯 (Career)
 
@@ -75,7 +80,7 @@ tags:
 	- 2019-07-12 请小蓝，晓晓，若郎，吴琼，关关去光大会展中心游泳，聚餐。
 	- 2019-07-20 请小蓝，晓晓，若郎游泳，聚餐
 
-2. 每天做地铁时，顺便给人民广场的流浪汉买早餐。
+2. 每天做地铁经过人民广场时，顺便给流浪汉买早餐。
 	- week1 done
 	- week2 done
 	- week3 done
@@ -109,6 +114,7 @@ tags:
 	- week31 done
 	- week32 done
 	- week33 done
+
 ---
 
 以上是我2019年的计划。
