--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -27,13 +27,15 @@ tags:
 - 打腿
 - 划水：侧身，前伸胳膊，全程收腹，肩膀放松，抬高手肘
 - 换气
-- 翻滚转身 (TODO)
+- 翻滚转身
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fIoPumDmiJo?start=10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## 3. 家庭 (Family)
 
 1. 学会开车
 
-2. 财务健康。过节俭的生活，增加家庭的储蓄，偿还债务，定投香港盈富基金和腾讯。（锁定投资策略后，3-5年不要再频繁调整。不要再花时间学习投资了，以节省时间，专心在对天国，对教会，对社会，对身边的人，有真正价值的事情上。）✔️
+2. 财务健康。过节俭的生活，增加家庭的储蓄，偿还债务，定投香港盈富基金和腾讯。（锁定投资策略后，3-5年不要再频繁调整。不要再花时间学习投资了，以节省时间，专心在对对教会，对社会，对身边的人有真正价值的事情上。）✔️
 
 ## 4. 职业生涯 (Career)
 
@@ -57,7 +59,11 @@ tags:
 5. C++ 太难了，我对自己的要求是读懂就好。
 
 6. 参加 PingCAP 举办的线下数据库会议 (optional)
-	- 2019-01-12 done
+	- 2019-01-12 (done)
+	- 2019-03-30 PingCAP Infra Meetup No.94 (done)
+	- 2019-06-30 PingCAP Tech Day Shanghai (done)
+	- 2019-08-31 TiDB User Group Meetup (done)
+
 
 ## 5. 教会 (Church)
 
@@ -78,7 +84,8 @@ tags:
 	- 2019-01-27 请大叔和治民来家里吃饭。
 	- 2019-02-06 请若郎来家里吃年夜饭。
 	- 2019-07-12 请小蓝，晓晓，若郎，吴琼，关关去光大会展中心游泳，聚餐。
-	- 2019-07-20 请小蓝，晓晓，若郎游泳，聚餐
+	- 2019-07-20 请小蓝，晓晓，若郎游泳，聚餐。
+	- 2019-07-27 请张韬和他太太来家里聚餐。
 
 2. 每天做地铁经过人民广场时，顺便给流浪汉买早餐。
 	- week1 done
