hide something to avoid pride

--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -57,6 +57,7 @@ tags:
 4. 练习 Golang 到精通的地步。
 
 5. C++ 太难了，我对自己的要求是读懂就好。
+	- C++ by example (Done ✔️)
 
 6. 参加 PingCAP 举办的线下数据库会议 (optional)
 	- 2019-01-12 (done)
@@ -87,6 +88,7 @@ tags:
 	- 2019-07-20 请小蓝，晓晓，若郎游泳，聚餐。
 	- 2019-07-27 请张韬和他太太来家里聚餐。
 
+<!-- The following lines are commented out.
 2. 每天做地铁经过人民广场时，顺便给流浪汉买早餐。
 	- week1 done
 	- week2 done
@@ -121,6 +123,7 @@ tags:
 	- week31 done
 	- week32 done
 	- week33 done
+-->
 
 ---
 
