update new year resolution

--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -15,7 +15,10 @@ tags:
 
 基督教两千多年，棘手的神学问题被翻来覆去的讨论，很多已经有了定论。换句话说，我对宗教所有的疑问和质疑，历史上几乎都被讨论过。
 
-**2 跟随小组的查经计划，认真的读完《旧约》**
+- 读完了《新铁证待判》✔️
+- 扫完了《十架君王》，不是我的菜✔️
+
+**2 跟随小组的查经计划，认真的读完《旧约》** ✔️
 
 - 每周跟随查经计划预习旧约经文
 - 准备好问题，到时候一起讨论
@@ -41,10 +44,11 @@ tags:
 
 未来5年，我打算把自己的职业生涯压在数据库开发上。咨询了2位很仰慕的数据库专家，他们给了一些务实建议和学习路线图。
 
-1. 为开源的数据库贡献代码，比如TiDB, PD, or TiKV.
+1. 为开源的数据库贡献代码，比如TiDB, PD, or TiKV. (Done ✔️)
+	
+	提交了一个不痛不痒的 PR，算是个开头吧，还有很长的路要走。
 
 2. 学习分布式系统理论知识
-	- [PingCAP Talent Plan](https://github.com/pingcap/talent-plan) (Almost Done ✔️)
 	- 卡内基梅隆大学的数据库课程
 	- MIT分布式系统课程
 	- 扫完数据库相关的论文
@@ -65,6 +69,17 @@ tags:
 	- 2019-06-30 PingCAP Tech Day Shanghai (done)
 	- 2019-08-31 TiDB User Group Meetup (done)
 
+7. 参加 PingCAP Talent Plan 线下培训 (Done ✔️)
+
+	- 拿到了毕业证书。
+	- 学会了 Goland 的使用，以及 debug 一个大型的 golang 项目。
+	- 结识了志同道合的朋友。
+
+![](/media/files/2019/2019-11-12-certificate.jpeg)
+
+
+<span style="color:green">(自我评估：花了1年准备数据库领域，但是并没有成功进入数据库公司工作，自己的能力与目标公司相差太远。在将来的路上，可以把数据库当作自己的业余爱好。)</span>
+
 
 ## 5. 教会 (Church)
 
@@ -80,15 +95,16 @@ tags:
 
 ### 5.3 探索新的服侍方向。
 
-1. 开放家庭，组织家庭聚餐至少10次。
+1. 开放家庭，组织家庭聚餐至少10次。(Done ✔️)
 	- 2019-01-11 接待小组成员在家庭内查经，规划2019年的个人计划。
 	- 2019-01-27 请大叔和治民来家里吃饭。
 	- 2019-02-06 请若郎来家里吃年夜饭。
 	- 2019-07-12 请小蓝，晓晓，若郎，吴琼，关关去光大会展中心游泳，聚餐。
 	- 2019-07-20 请小蓝，晓晓，若郎游泳，聚餐。
 	- 2019-07-27 请张韬和他太太来家里聚餐。
+	- 2019-11-03 周日 church day
+	- 2019-11-15 Cell Group
 
-<!-- The following lines are commented out.
 2. 每天做地铁经过人民广场时，顺便给流浪汉买早餐。
 	- week1 done
 	- week2 done
@@ -123,8 +139,8 @@ tags:
 	- week31 done
 	- week32 done
 	- week33 done
-	- 离职 SAP 了，所以暂停了
--->
+	- 2019-08-31 离职 SAP，所以暂停了
+
 
 ---
 
