--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -104,6 +104,7 @@ tags:
 	- 2019-07-27 请张韬和他太太来家里聚餐。
 	- 2019-11-03 周日 church day
 	- 2019-11-15 Cell Group
+	- 2019-11-24 邀请小蓝晓晓，向文，若郎来家里聚餐，给刘小坤过生日。
 
 2. 每天做地铁经过人民广场时，顺便给流浪汉买早餐。
 	- week1 done
