--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -105,6 +105,7 @@ tags:
 	- 2019-11-03 周日 church day
 	- 2019-11-15 Cell Group
 	- 2019-11-24 邀请小蓝晓晓，向文，若郎来家里聚餐，给刘小坤过生日。
+	- 2019-12-09 邀请若郎和向文来家里吃饭
 
 2. 每天做地铁经过人民广场时，顺便给流浪汉买早餐。
 	- week1 done
