--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -43,7 +43,7 @@ tags:
 	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
 3. 教沐沐英文
-  - 有没有什么办法可以让全家人的英文水平都提高上去。（除了旅游）
+  - 有没有什么办法可以让全家人的英文水平都提高上去？（除了出国旅游）
 
 4. 教沐沐编程（或许可以先从逻辑开始）
 
@@ -56,19 +56,38 @@ tags:
 
 ---
 
-## 工作
+## Work
 
 **Workstream**
 
-1. 不要太由着自己性子干活，
+1.成就 Workstream, 也让 Workstream 成就自己。
 
-1. 提高自己远程办公的能力
-  - 验成色：看自己是否适合远程办公
-  - 提高远程办公的效率
+在薄荷的时候，有 CTO 亲自带着我，我在他搭的架子下完成各个组件(microservice) 的开发。在 SAP Jam 的时候，温哥华的架构师敲定技术选型。整个职业生涯，我都被"保护"的很好。
 
-3. 学习 AWS 生态，考个 AWS Certified Solutions Architect 证书
+现在没有任何的导师帮助我，我要自力更生了，看看能飞多远。
 
-2. 打磨前端能力，达到初级前端程序员的水平，比如，能马马虎虎的写个小网站。
+- 能不能把 CICD 搭好?
+- 能不能把 MicroService 搞起来?
+- Devops 能做到什么程度?
+- 能不能写好 Goalng / Python / JavaScript?
+- 能不能承载2000万的流量?
+
+激动人心且充满恐惧。
+
+
+2.考个 AWS Certified Solutions Architect 证书。
+
+我应该会在外企干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
+
+
+3.打磨前端能力，达到初级前端程序员的水平。比如，能马马虎虎的写个小网站。
+
+
+4.提高自己远程办公的能力
+
+- 独立解决各种问题
+
+
 
 
 
@@ -81,12 +100,9 @@ tags:
 
 - 一个月写一篇公众号文章，接接地气。
 
+- 欧阳志平：Anki 半个小时的介绍课程
 
-<!
-
-- 欧阳志平：Anki 介绍
-
-- 用 Python 写个 PubMed 小网站，探索数据相关的领域。
+- 用 Python 写个 PubMed 小网站，练习 Python。
 
 - 糖尿病食谱小助手
 
@@ -96,7 +112,6 @@ tags:
 
 - Flash Card
 
--->
 
 
 ## Church
