--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -11,17 +11,16 @@ tags:
 
 ## Faith
 
-继续努力搞明白福音，读书！读书！读书，读圣经，教会史，传记，日记。
+继续努力搞明白福音，多读书，读圣经，教会史，传记，日记。
 
 - 《约翰卫斯理日记》
 - 戴德生《人往哪里去》
 
 
-探索，不作要求
+探索，不对自己做硬性要求
 
 - 去 Yumin 的教会闲逛，搞清楚道金斯逻辑缺陷是什么。
 - 周六去 James 的教会闲逛，看看是否有所收获。
-- Vincent 懂很多，趁他没有出国，和他聊聊天，或许可以请他来家里吃饭。
 
 ---
 
@@ -31,7 +30,6 @@ tags:
 
 2. 学习力量训练，增肌，降体脂。
 
-
 ---
 
 ## Family
@@ -39,7 +37,7 @@ tags:
 1. 学开车，拿到驾照。
 
 2. 保持财务健康
-	- 还掉债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
+	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
 	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
 3. 教沐沐英文
@@ -49,7 +47,8 @@ tags:
 
 ---
 
-## 英语
+## English
+
 
 1. 每周约 iTalki 老师 2 节课，练习英文口语。
 
@@ -60,35 +59,42 @@ tags:
 
 **Workstream**
 
-1.成就 Workstream, 也让 Workstream 成就自己。
+1.**成就 Workstream, 也让它成就自己。**
 
 在薄荷的时候，有 CTO 亲自带着我，我在他搭的架子下完成各个组件(microservice) 的开发。在 SAP Jam 的时候，温哥华的架构师敲定技术选型。整个职业生涯，我都被"保护"的很好。
 
 现在没有任何的导师帮助我，我要自力更生了，看看能飞多远。
 
-- 能不能把 CICD 搭好?
+- 能不能把 CI/CD 搭好?
 - 能不能把 MicroService 搞起来?
 - Devops 能做到什么程度?
-- 能不能写好 Goalng / Python / JavaScript?
+- 能不能写好 Golng / Python / JavaScript?
 - 能不能承载2000万的流量?
 
-激动人心且充满恐惧。
+激动人心且充满压力。
 
 
-2.考个 AWS Certified Solutions Architect 证书。
+2.**考个 AWS Certified Solutions Architect 证书。**
 
-我应该会在外企干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
-
-
-3.打磨前端能力，达到初级前端程序员的水平。比如，能马马虎虎的写个小网站。
+我应该会在外企这条路上继续干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
 
 
-4.提高自己远程办公的能力
-
-- 独立解决各种问题
+3.**打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
 
+4.**每个月给一个老朋友打电话（或吃饭）。**
 
+这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。
+
+听听他们对这个世界的看法，兼听则明。
+
+
+5.**提高自己远程办公的能力**
+
+- 规律的作息
+- 充足的睡眠
+- 强壮的身体
+- 合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 bucket。
 
 
 **业余爱好探索**
@@ -100,7 +106,7 @@ tags:
 
 - 一个月写一篇公众号文章，接接地气。
 
-- 欧阳志平：Anki 半个小时的介绍课程
+- 欧阳志平邀请的公开课：Anki 介绍课程
 
 - 用 Python 写个 PubMed 小网站，练习 Python。
 
@@ -116,8 +122,40 @@ tags:
 
 ## Church
 
-- 开放家庭，每月请弟兄姐妹/朋友/同事来家里聚餐。
-- Social一点，每月去探访一个弟兄姐妹/朋友/同事
+
+1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太是一个安静的人，一开始以为她会反感，结果是多虑了，她喜欢招待朋友。
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+
+2. 在自己内心社交能力承受范围之内，每月去探访一个弟兄姐妹/朋友/同事。这应该不完全归到 Church 中，因为我自己也挺享受和朋友的在一起的时光。
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+
+3. 继续做一些杂七杂八的，和 IT 相关的优化流程的事情。
 
 
-以上挺多的了，能做到一半就不错了，就继续加 Goal 了。
+4. Vincent 懂很多，趁他没有出国，和他聊聊天，或许可以请他来家里吃饭。 
+
+
+
+以上挺多的了，2020 年能做到 70% 就算圆满完成任务了。
