make more 2020 more concrete

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -8,6 +8,8 @@ tags:
   -
 ---
 
+过去4年，在 SAP 心无杂念。2020年，我将主题定为“探索”，从专注模式切换到探索模式。
+
 
 ## Faith
 
@@ -16,11 +18,16 @@ tags:
 - 《约翰卫斯理日记》
 - 戴德生《人往哪里去》
 
+听不同讲道人的讲道
+
+- 保罗·华许
+- 保罗·区普
 
 探索，不对自己做硬性要求
 
 - 去 Yumin 的教会闲逛，搞清楚道金斯逻辑缺陷是什么。
 - 周六去 James 的教会闲逛，看看是否有所收获。
+
 
 ---
 
